<resources>

    <!--  system strings  -->
    <string name="app_name">File Manager</string>
    <string name="content_description">contentDescription</string>

    <!--  main actions  -->
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="app_info">App Info</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="copy_to">Copy To:</string>
    <string name="copying_to">Copying</string>
    <string name="move">Move</string>
    <string name="move_to">Move To:</string>
    <string name="moving_to">Moving</string>
    <string name="share">Share</string>
    <string name="add_short_cut">Add Shortcut</string>
    <string name="create_new_folder">Create Folder</string>
    <string name="hide">Hide</string>
    <string name="sort">Sort By</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <string name="apply_to_all">Apply To All Items</string>
    <string name="skip">Skip</string>
    <string name="replace">Replace</string>

    <!--  storage types  -->
    <string name="storage">Storage</string>
    <string name="internal_storage">Phone Internal Storage</string>
    <string name="sd_card">Sd Card</string>
    <string name="usb_storage">Usb</string>

    <!--  file categories  -->
    <string name="category_recent_files">category_recent_files</string>
    <string name="category_images">category_images</string>
    <string name="category_videos">category_videos</string>
    <string name="category_audio">category_audio</string>
    <string name="category_documents">category_documents</string>
    <string name="category_apks">category_apks</string>

    <!--  drawer items name  -->
    <string name="dcim">DCIM</string>
    <string name="download">Download</string>
    <string name="movies">Movies</string>
    <string name="musics">Musics</string>
    <string name="pictures">Pictures</string>
    <string name="quick_access">Quick Access</string>
    <string name="recent_files">Recent Files</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="apks">APKs</string>
    <string name="app_manager">App Manager</string>
    <string name="settings">Settings</string>

    <!--  permission warnings  -->
    <string name="permission_elementary_description">This App Needs Read And Write Permission To Work Properly.</string>
    <string name="permission_detailed_description">This App Can\'t Work Without Read And Write Permission.</string>
    <string name="permission_final_description">For Allowing The App To Access To Storage Grant Storage Permission In App Info Screen, Otherwise Exit.</string>

    <!--  warnings and errors  -->
    <string name="not_found_file_error">Nothing To Show</string>
    <string name="dir_allready_exist_error">There Is A Directory With This Name!</string>
    <string name="file_allready_exist_error">There Is A File With This Name!</string>
    <string name="delete_files">Delete</string>
    <string name="delete_file_error">Failed To Delete File</string>
    <string name="parent_to_Child_copy_error">The Chosen Folder Is Subfolder Of The Source.</string>
    <string name="replace_or_rename">Replace File Or Rename It?</string>
    <string name="replace_or_rename_desc">You Already Have A File Named </string>

    <!--  files and folders  -->
    <string name="files">Files</string>
    <string name="folders">Folders</string>
    <string name="simple_txt_format">".txt"</string>

    <!--  settings items  -->
    <string name="appearance">Appearance</string>
    <string name="split_contents">Enable Split Folders And Files</string>
    <string name="show_hidden_files">Show Hidden Files And Folders</string>

    <!--  appearance stuffs  -->
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="choose_theme">Choose Theme</string>
</resources>