<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_dialog_permission_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_elementary_description"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_dialog_permission_desc_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_permission_desc"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_dialog_permission_desc_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_dialog_permission_desc_ok"
        app:layout_constraintTop_toTopOf="@+id/btn_dialog_permission_desc_ok"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dialog_permission_desc_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>