<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scr_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SelectableMediumTextView"
                android:id="@+id/txt_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appearance"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/SelectableBackground"
                android:id="@+id/container_switch_show_hidden_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MediumTextView"
                    android:id="@+id/txt_show_hidden_files"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/show_hidden_files"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switch_show_hidden_files"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_show_hidden_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/material_normal_dimen"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/SelectableBackground"
                android:id="@+id/container_switch_split_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MediumTextView"
                    android:id="@+id/txt_split_contents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/split_contents"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switch_split_contents"/>

                <androidx.appcompat.widget.SwitchCompat
                    style="@style/ParentSwitchStyle"
                    android:id="@+id/switch_split_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>